@@ -7,7 +7,7 @@ import com.mongodb.client.MongoClients;
 import com.mongodb.client.MongoDatabase;
 
 import java.io.Serializable;
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * A Singleton class for maintaining a connection to the MongoDatabase.
@@ -43,10 +43,10 @@ public class MongoClientProvider implements Serializable {
     /**
      * Initialize the MongoClient.
      */
-    private void init() {
+    private static void init() {
         client = MongoClients.create(MongoClientSettings.builder()
                 .applyToClusterSettings(builder ->
-                        builder.hosts(Arrays.asList(new ServerAddress("flux-mongo", 27017))))
+                        builder.hosts(List.of(new ServerAddress("flux-mongo", 27017))))
                 .build());
     }
 }
