@@ -11,13 +11,10 @@ import org.xml.sax.SAXException;
 
 import java.io.IOException;
 
-import static org.custommonkey.xmlunit.XMLAssert.assertXMLEqual;
+import static org.xmlunit.assertj3.XmlAssert.assertThat;
 
-public class CsvToXmlComponentTest extends CamelTestSupport {
+class CsvToXmlComponentTest extends CamelTestSupport {
 
-    private final String csvWithoutHeader = "Koen;Castermans;21\nJaap;Aap;30";
-    private final String csvWithHeader = "Voornaam;Achternaam;Leeftijd\nKoen;Castermans;21\nJaap;Aap;30";
-    private final String csvWithHeaderIncludingInvalidCharacters = "xml1-.order   1num&mer;naam;prijs\n1;iPhone;800";
     private final String encoding = "UTF-8";
 
     @Override
@@ -38,96 +35,39 @@ public class CsvToXmlComponentTest extends CamelTestSupport {
         };
     }
 
-
     @Test
-    public void testCsvWithHeaders() throws IOException, SAXException {
+    void testCsvWithHeaders() throws SAXException {
+
+        String csvWithHeader = "Voornaam;Achternaam;Leeftijd\nKoen;Castermans;21\nJaap;Aap;30";
         template.sendBody("direct:testWithHeaders", csvWithHeader);
 
-        Exchange result = getMockEndpoint("mock:outWithHeaders").getExchanges().get(0);
+        Exchange result = getMockEndpoint("mock:outWithHeaders").getExchanges().getFirst();
 
         String expected = getExpectedXml();
         String actual = result.getIn().getBody(String.class);
 
         XMLUnit.setIgnoreWhitespace(true);
-        assertXMLEqual(expected,actual);
+
+        assertThat(actual).and(expected).areIdentical();
 
     }
-
-
-
-    /*
-    @Test
-    public void testCsvWithoutHeaders() throws IOException, SAXException {
-        template.sendBody("direct:testWithoutHeader", csvWithoutHeader);
-
-        Exchange result = getMockEndpoint("mock:testWithoutHeader").getExchanges().get(0);
-
-        String expected = getExpectedXmlWithoutHeaders();
-        String actual = result.getIn().getBody(String.class);
-
-        XMLUnit.setIgnoreWhitespace(true);
-        assertXMLEqual(expected,actual);
-
-    }
-
-    @Test
-    public void testCsvWithHeadersIncludingInvalidCharacters() throws IOException, SAXException {
-        template.sendBody("direct:testWithHeaders", csvWithHeaderIncludingInvalidCharacters);
-
-        Exchange result = getMockEndpoint("mock:outWithHeaders").getExchanges().get(0);
-
-        String expected = getExpectedXmlHeadersWithInvalidCharacters();
-        String actual = result.getIn().getBody(String.class);
-
-        XMLUnit.setIgnoreWhitespace(true);
-        assertXMLEqual(expected,actual);
-
-    }
-
-     */
 
     private String getExpectedXml() {
-        return "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-                "<items>\n" +
-                "  <item>\n" +
-                "    <Leeftijd>21</Leeftijd>\n" +
-                "    <Voornaam>Koen</Voornaam>\n" +
-                "    <Achternaam>Castermans</Achternaam>\n" +
-                "  </item>\n" +
-                "  <item>\n" +
-                "    <Leeftijd>30</Leeftijd>\n" +
-                "    <Voornaam>Jaap</Voornaam>\n" +
-                "    <Achternaam>Aap</Achternaam>\n" +
-                "  </item>\n" +
-                "</items>";
+        return """
+                <?xml version="1.0" encoding="UTF-8"?>
+                <items>
+                  <item>
+                    <Voornaam>Koen</Voornaam>
+                    <Achternaam>Castermans</Achternaam>
+                    <Leeftijd>21</Leeftijd>
+                  </item>
+                  <item>
+                    <Voornaam>Jaap</Voornaam>
+                    <Achternaam>Aap</Achternaam>
+                    <Leeftijd>30</Leeftijd>
+                  </item>
+                </items>""";
     }
-
-    private String getExpectedXmlWithoutHeaders() {
-        return "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-                "<items>\n" +
-                "  <item>\n" +
-                "    <string>Koen</string>\n" +
-                "    <string>Castermans</string>\n" +
-                "    <string>21</string>\n" +
-                "  </item>\n" +
-                "  <item>\n" +
-                "    <string>Jaap</string>\n" +
-                "    <string>Aap</string>\n" +
-                "    <string>30</string>\n" +
-                "  </item>\n" +
-                "</items>";
-    }
-
-    private String getExpectedXmlHeadersWithInvalidCharacters(){
-        return "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-                "<items>\n" +
-                "  <item>\n" +
-                "    <naam>iPhone</naam>\n" +
-                "    <order1nummer>1</order1nummer>\n" +
-                "    <prijs>800</prijs>\n" +
-                "  </item>\n" +
-                "</items>";
-    }
-
 
 }
+
