@@ -5,40 +5,41 @@ import org.apache.camel.builder.RouteBuilder;
 import org.apache.camel.test.junit5.CamelTestSupport;
 import org.junit.jupiter.api.Test;
 
+import static org.xmlunit.assertj3.XmlAssert.assertThat;
 
-import static org.custommonkey.xmlunit.XMLAssert.assertXMLEqual;
-
-
-public class FormToXmlComponentTest extends CamelTestSupport {
+class FormToXmlComponentTest extends CamelTestSupport {
 
     private final String encoding = "utf-8";
 
-    private final String expectedXml =
-            "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n" +
-            "<items>\n" +
-            "  <surname>Catalão</surname>\n" +
-            "  <name>Pedro</name>\n" +
-            "  <myage>36</myage>\n" +
-            "</items>";
+    private static final String EXPECTED =
+            """
+            <?xml version="1.0" encoding="utf-8"?>
+            <items>
+              <name>Pedro</name>
+              <surname>Catalão</surname>
+              <myage>36</myage>
+            </items>""";
 
-    private final String expectedXmlWithInvalidKeyNames =
-            "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n" +
-            "<items>\n" +
-            "  <city>Lisbon</city>\n" +
-            "</items>";
+    private static final String EXPECTED_XML_WITH_INVALID_KEY_VALUES =
+            """
+            <?xml version="1.0" encoding="utf-8"?>
+            <items>
+              <city>Lisbon</city>
+            </items>""";
 
-    private final String expectedXmlWithEmptyKeyValues =
-            "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n" +
-                    "<items>\n" +
-                    "  <surname>catalao</surname>\n" +
-                    "  <name></name>\n" +
-                    "</items>";
+    private static final String EXPECTED_XML_WITH_EMPTY_KEY_VALUES =
+            """
+            <?xml version="1.0" encoding="utf-8"?>
+            <items>
+              <name></name>
+              <surname>catalao</surname>
+            </items>""";
 
     @Override
-    protected RouteBuilder createRouteBuilder() throws Exception {
+    protected RouteBuilder createRouteBuilder() {
         return new RouteBuilder() {
             @Override
-            public void configure() throws Exception {
+            public void configure() {
                 from("direct:testRoute")
                         .to("formtoxml://?encoding=" + encoding)
                         .to("mock:testFormToXml");
@@ -47,49 +48,54 @@ public class FormToXmlComponentTest extends CamelTestSupport {
     }
 
     @Test
-    public void testFormDataValid() throws Exception {
+    void testFormDataValid() {
         String validFormData = "name=Pedro&surname=Catalão&myage=36";
         template.sendBody("direct:testRoute", validFormData);
 
-        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().get(0);
-        String body = result.getIn().getBody(String.class);
+        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().getFirst();
+        String actual = result.getIn().getBody(String.class);
 
-        assertXMLEqual(expectedXml, body);
+        assertThat(actual).and(EXPECTED).areIdentical();
+
     }
 
     @Test
-    public void testFormDataWithInvalidCharacters() throws Exception {
+    void testFormDataWithInvalidCharacters() {
         String formDataInvalidCharacters = "name=Pedro&sur$naãme=Catalão&my age=36";
         template.sendBody("direct:testRoute", formDataInvalidCharacters);
 
-        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().get(0);
+        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().getFirst();
 
-        String body = result.getIn().getBody(String.class);
+        String actual = result.getIn().getBody(String.class);
 
-        assertXMLEqual(expectedXml, body);
+        assertThat(actual).and(EXPECTED).areIdentical();
+
     }
 
     @Test
-    public void testFormDataWithInvalidKeyNames() throws Exception {
+    void testFormDataWithInvalidKeyNames() {
         String formDataWithInvalidKeyNames = "38=Pedro&city=Lisbon";
         template.sendBody("direct:testRoute", formDataWithInvalidKeyNames);
 
-        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().get(0);
+        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().getFirst();
 
-        String body = result.getIn().getBody(String.class);
+        String actual = result.getIn().getBody(String.class);
 
-        assertXMLEqual(expectedXmlWithInvalidKeyNames, body);
+        assertThat(actual).and(EXPECTED_XML_WITH_INVALID_KEY_VALUES).areIdentical();
+
     }
 
     @Test
-    public void testFormDataWithEmptyKeyValues() throws Exception {
+    void testFormDataWithEmptyKeyValues() {
         String formDataEmptyKeyValues = "name=&surname=catalao=age&=";
         template.sendBody("direct:testRoute", formDataEmptyKeyValues);
 
-        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().get(0);
+        Exchange result = getMockEndpoint("mock:testFormToXml").getExchanges().getFirst();
 
-        String body = result.getIn().getBody(String.class);
+        String actual = result.getIn().getBody(String.class);
 
-        assertXMLEqual(expectedXmlWithEmptyKeyValues, body);
+        assertThat(actual).and(EXPECTED_XML_WITH_EMPTY_KEY_VALUES).areIdentical();
+
     }
+
 }
