@@ -1,8 +1,8 @@
 package org.assimbly.sql.adapter;
 
-import org.apache.http.NameValuePair;
-import org.apache.http.client.utils.URLEncodedUtils;
-import org.apache.http.message.BasicNameValuePair;
+import org.apache.hc.core5.http.NameValuePair;
+import org.apache.hc.core5.http.message.BasicNameValuePair;
+import org.apache.hc.core5.net.WWWFormCodec;
 import org.assimbly.sql.domain.JDBCConnection;
 
 import java.nio.charset.StandardCharsets;
@@ -11,10 +11,11 @@ import java.sql.DriverManager;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 public class PostgresAdapter implements DatabaseAdapter {
 
-    private static volatile boolean registered;
+    private static final AtomicBoolean registered = new AtomicBoolean(false);
 
     @Override
     public Connection connect(JDBCConnection connection) throws SQLException {
@@ -31,17 +32,17 @@ public class PostgresAdapter implements DatabaseAdapter {
             );
         }
 
-        String query = URLEncodedUtils.format(parameters, StandardCharsets.UTF_8);
+        String query = WWWFormCodec.format(parameters, StandardCharsets.UTF_8);
 
-        String url = String.format("jdbc:postgresql://%s:%s/%s?%s",
-                connection.getHost(), connection.getPort(), connection.getDatabase(), query);
+        String url = "jdbc:postgresql://%s:%s/%s?%s".formatted(connection.getHost(), connection.getPort(), connection.getDatabase(), query);
 
         DriverManager.setLoginTimeout(5);
-        if(!registered) {
+        if(registered.compareAndSet(false, true)) {
             DriverManager.registerDriver(driver);
-            registered = true;
         }
 
         return DriverManager.getConnection(url, connection.getUsername(), connection.getPassword());
+
     }
+
 }
