@@ -2,9 +2,9 @@ package org.assimbly.sql.adapter;
 
 import com.microsoft.sqlserver.jdbc.SQLServerDriver;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.http.NameValuePair;
-import org.apache.http.client.utils.URLEncodedUtils;
-import org.apache.http.message.BasicNameValuePair;
+import org.apache.hc.core5.http.NameValuePair;
+import org.apache.hc.core5.http.message.BasicNameValuePair;
+import org.apache.hc.core5.net.WWWFormCodec;
 import org.assimbly.sql.domain.JDBCConnection;
 
 import java.nio.charset.StandardCharsets;
@@ -13,10 +13,11 @@ import java.sql.DriverManager;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 public class SqlServerAdapter implements DatabaseAdapter {
 
-    private static volatile boolean registered;
+    private static final AtomicBoolean registered = new AtomicBoolean(false);
 
     @Override
     public Connection connect(JDBCConnection connection) throws SQLException {
@@ -33,15 +34,14 @@ public class SqlServerAdapter implements DatabaseAdapter {
             );
         }
 
-        String query = URLEncodedUtils.format(parameters, StandardCharsets.UTF_8);
+        String query = WWWFormCodec.format(parameters, StandardCharsets.UTF_8);
         String instance = StringUtils.isNotEmpty(connection.getInstance()) ? "\\"+connection.getInstance() : "";
-        String url = String.format("jdbc:sqlserver://%s%s:%s;DatabaseName=%s;%s",
+        String url = "jdbc:sqlserver://%s%s:%s;DatabaseName=%s;%s".formatted(
                 connection.getHost(), instance, connection.getPort(), connection.getDatabase(), query);
 
         DriverManager.setLoginTimeout(5);
-        if(!registered) {
+        if(registered.compareAndSet(false, true)) {
             DriverManager.registerDriver(driver);
-            registered = true;
         }
 
         return DriverManager.getConnection(url, connection.getUsername(), connection.getPassword());
