@@ -5,38 +5,31 @@ import org.apache.camel.Exchange;
 import org.apache.camel.Processor;
 import org.apache.camel.language.groovy.GroovyExpression;
 import org.apache.camel.language.xpath.XPathBuilder;
-import org.apache.camel.language.simple.SimpleLanguage;
 import org.apache.camel.model.language.SimpleExpression;
+import org.apache.camel.support.LanguageSupport;
 import org.assimbly.util.EncryptionUtil;
 import org.assimbly.util.exception.EnvironmentException;
 import org.assimbly.util.exception.TenantVariableNotFoundException;
 import org.assimbly.util.helper.Base64Helper;
 import org.assimbly.util.helper.ExchangeHelper;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.assimbly.tenantvariables.domain.EnvironmentValue;
 import org.assimbly.tenantvariables.domain.TenantVariable;
 import org.assimbly.tenantvariables.mongo.MongoDao;
 
 import java.util.Objects;
 import java.util.Optional;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 
 public class TenantVariablesProcessor implements Processor {
 
-    private static final Logger LOG = LoggerFactory.getLogger(TenantVariablesProcessor.class);
-
     private static final String ALGORITHM = "PBEWithHMACSHA512AndAES_256";
     private static final String ASSIMBLY_ENCRYPTION_SECRET = System.getenv("ASSIMBLY_ENCRYPTION_SECRET");
 
-    private EncryptionUtil encryptionUtil = new EncryptionUtil(ASSIMBLY_ENCRYPTION_SECRET, ALGORITHM);
+    private final EncryptionUtil encryptionUtil = new EncryptionUtil(ASSIMBLY_ENCRYPTION_SECRET, ALGORITHM);
 
-    private final String DEFAULT_TENANT_NAME = "default";
+    private static final String DEFAULT_TENANT_NAME = "default";
     private static final String ASSIMBLY_ENV = "ASSIMBLY_ENV";
-    private final String BODY_VARIABLE_REGEX = "\\$\\{body(?:As\\(.*\\))?}";
 
     private TenantVariablesEndpoint endpoint;
 
@@ -64,13 +57,11 @@ public class TenantVariablesProcessor implements Processor {
     }
 
     public String decrypt(String encryptedValue) {
-        String value = encryptionUtil.decrypt(encryptedValue);
-        return value;
+        return encryptionUtil.decrypt(encryptedValue);
     }
 
     public String encrypt(String value) {
-        String encryptedValue = encryptionUtil.encrypt(value);
-        return encryptedValue;
+        return encryptionUtil.encrypt(value);
     }
 
     public String getValueByEnvironmentValue(EnvironmentValue environmentVar) {
@@ -82,26 +73,29 @@ public class TenantVariablesProcessor implements Processor {
         String tenantDbName = (endpoint.getConfiguration().getTenantDbName()!=null ? endpoint.getConfiguration().getTenantDbName() : DEFAULT_TENANT_NAME);
         String environment = (endpoint.getConfiguration().getEnvironment()!=null ? endpoint.getConfiguration().getEnvironment() : getEnvironment());
 
-        name = interpolateVar(name, exchange, false);
+        name = interpolateVar(name, exchange);
 
         TenantVariable gVariable = MongoDao.findTenantVariableByName(name, tenantDbName);
 
         if(gVariable == null) {
             throw new TenantVariableNotFoundException(
-                    String.format("The Tenant Variable \"%1$s\" for tenant \"%2$s\" was not found in the database.", name, tenantDbName)
+                    "The Tenant Variable \"%1$s\" for tenant \"%2$s\" was not found in the database.".formatted(name, tenantDbName)
             );
         }
 
-        if(!gVariable.find(environment).isPresent())
-            throw new TenantVariableNotFoundException("The Tenant Variable \"" + name + "\" has no values for the "+ environment +" environment.");
+        Optional<EnvironmentValue> gVariableOptional = gVariable.find(environment);
 
-        EnvironmentValue variable = gVariable.find(environment).get();
+        if(gVariableOptional.isEmpty()) {
+            throw new TenantVariableNotFoundException("The Tenant Variable \"" + name + "\" has no values for the " + environment + " environment.");
+        }else {
+            EnvironmentValue variable = gVariableOptional.get();
 
-        String value = (variable.isEncrypted() ? decrypt(variable.getValue()) : variable.getValue());
+            String value = (variable.isEncrypted() ? decrypt(variable.getValue()) : variable.getValue());
 
-        String header = interpolateVar(endpoint.getConfiguration().getHeaderName(), exchange, false);
+            String header = interpolateVar(endpoint.getConfiguration().getHeaderName(), exchange);
 
-        exchange.getIn().setHeader(header, value);
+            exchange.getIn().setHeader(header, value);
+        }
     }
 
     private void setTenantVariable(Exchange exchange) {
@@ -114,14 +108,14 @@ public class TenantVariablesProcessor implements Processor {
         String environment = (endpoint.getConfiguration().getEnvironment()!=null ? endpoint.getConfiguration().getEnvironment() : getEnvironment());
         long modifyDate = System.currentTimeMillis();
 
-        name = interpolateVar(name, exchange, false);
+        name = interpolateVar(name, exchange);
 
         value = interpolateVar(Base64Helper.unmarshal(value, UTF_8), exchange, expressionType);
 
+        String modifier = groupName.equalsIgnoreCase("groupless") ? flowName : groupName + "/" + flowName;
+
         TenantVariable gVariable = MongoDao.findTenantVariableByName(name, tenantDbName);
         boolean gVariableExist = !Objects.isNull(gVariable);
-
-        String modifier = groupName.equalsIgnoreCase("groupless") ? flowName : groupName + "/" + flowName;
 
         if(!gVariableExist) {
             gVariable = new TenantVariable(name);
@@ -129,7 +123,9 @@ public class TenantVariablesProcessor implements Processor {
             gVariable.setCreatedBy(modifier);
         }
 
-        if(environment != null && !gVariable.find(environment).isPresent()){
+        Optional<EnvironmentValue> gVariableOptional = gVariable.find(environment);
+
+        if(environment != null && gVariableOptional.isEmpty()){
             gVariable.put(new EnvironmentValue(environment));
         }else if(environment==null){
             throw new TenantVariableNotFoundException("The Tenant Variable environment is not set.");
@@ -137,7 +133,8 @@ public class TenantVariablesProcessor implements Processor {
 
         Optional<EnvironmentValue> optional = gVariable.find(environment);
 
-        EnvironmentValue variable = optional.get();
+        if(optional.isPresent()) {
+            EnvironmentValue variable = optional.get();
 
         boolean encrypt = endpoint.getConfiguration().isEncrypt();
 
@@ -153,6 +150,7 @@ public class TenantVariablesProcessor implements Processor {
         variable.setUpdatedBy(modifier);
 
         MongoDao.updateTenantVariable(gVariable, tenantDbName, gVariableExist);
+        }
     }
 
     private void deleteTenantVariable(Exchange exchange) {
@@ -170,15 +168,11 @@ public class TenantVariablesProcessor implements Processor {
         MongoDao.deleteTenantVariable(variable, tenantDbName);
     }
 
-    private String interpolateVar(String varValue, Exchange exchange, boolean bodyFlag) {
+    private String interpolateVar(String varValue, Exchange exchange) {
         if(ExchangeHelper.hasVariables(varValue))
             varValue = ExchangeHelper.interpolate(varValue, exchange);
 
-        if(bodyFlag)
-            if (isBodyVariable(varValue))
-                varValue = interpolateBody(varValue, exchange);
-
-        if(SimpleLanguage.hasSimpleFunction(varValue)) {
+        if(LanguageSupport.hasSimpleFunction(varValue)) {
             SimpleExpression simpleExpression = new SimpleExpression(varValue);
             varValue = simpleExpression.evaluate(exchange, String.class);
         }
@@ -200,8 +194,9 @@ public class TenantVariablesProcessor implements Processor {
                     // do nothing
                     break;
                 case "xpath":
-                    XPathBuilder builder = XPathBuilder.xpath(varValue).saxon();
-                    varValue = builder.evaluate(exchange.getContext(), bodyContent);
+                    try(XPathBuilder builder = XPathBuilder.xpath(varValue).saxon()) {
+                        varValue = builder.evaluate(exchange.getContext(), bodyContent);
+                    }
                     break;
                 case "jsonpath":
                     varValue = JsonPath.parse(bodyContent).read(varValue).toString();
@@ -213,38 +208,15 @@ public class TenantVariablesProcessor implements Processor {
                 default:
                     // do nothing
             }
-        } catch (Exception e){
+        } catch (Exception _){
             throw new EnvironmentException("Error to interpolate variable.");
         }
 
         return varValue;
     }
 
-    private boolean isBodyVariable(String string) {
-        return Pattern.compile(BODY_VARIABLE_REGEX).matcher(string).find();
-    }
-
-    private String interpolateBody(String string, Exchange exchange) {
-        Matcher m = Pattern.compile(BODY_VARIABLE_REGEX).matcher(string);
-        StringBuffer stringBuffer = new StringBuffer();
-
-        while (m.find()) {
-            String bValue = exchange.getIn().getBody(String.class);
-
-            if (bValue != null)
-                m.appendReplacement(stringBuffer, escapeDollarSign(bValue));
-        }
-
-        m.appendTail(stringBuffer);
-
-        return stringBuffer.toString();
-    }
-
-    private String escapeDollarSign(String str) {
-        return str.replace("$", "\\$");
-    }
-
     public static String getEnvironment() {
         return System.getenv(ASSIMBLY_ENV);
     }
+
 }
